LCD-46200 add default add-opens to springboot JavaExec tasks